tests/errors/cpp_err2.f90
program cpp_err2
#if 2 < 1+2+ / 1 2
#endif
print *, 'OK'
end program
